--- a/src/mongo/db/query/virtual_collection/SConscript
+++ b/src/mongo/db/query/virtual_collection/SConscript
@@ -9,6 +9,7 @@ env.CppUnitTest(
         "external_record_store_test.cpp",
     ],
     LIBDEPS=[
+        "$BUILD_DIR/mongo/db/catalog/collection_options",
         "$BUILD_DIR/mongo/db/query/virtual_collection/virtual_collection",
         "$BUILD_DIR/mongo/db/storage/record_store_base",
     ],
