--- a/src/mongo/db/commands/BUILD.bazel
+++ b/src/mongo/db/commands/BUILD.bazel
@@ -292,6 +292,7 @@ idl_generator(
         "//src/mongo/db/auth:action_type_gen",
         "//src/mongo/db/catalog:clustered_collection_options_gen",
         "//src/mongo/db/catalog:collection_options_gen",
+        "//src/mongo/db/catalog:external_data_source_options_gen",
         "//src/mongo/db/pipeline:change_stream_pre_and_post_images_options_gen",
         "//src/mongo/db/timeseries:timeseries_gen",
         "//src/mongo/idl:generic_argument_gen",
