--- a/src/mongo/db/query/virtual_collection/SConscript
+++ b/src/mongo/db/query/virtual_collection/SConscript
@@ -14,3 +14,14 @@ env.CppUnitTest(
         "$BUILD_DIR/mongo/db/storage/record_store_base",
     ],
 )
+
+env.CppUnitTest(
+    target="csv_file_test",
+    source=[
+        "csv_file_test.cpp",
+    ],
+    LIBDEPS=[
+        "$BUILD_DIR/mongo/db/query/virtual_collection/csv_file",
+        "$BUILD_DIR/mongo/db/server_base",
+    ],
+)
