--- a/src/mongo/db/query/virtual_collection/BUILD.bazel
+++ b/src/mongo/db/query/virtual_collection/BUILD.bazel
@@ -16,12 +16,14 @@ mongo_cc_library(
         "multi_bson_stream_cursor.cpp",
     ],
     hdrs = [
+        "csv_file.h",
         "external_record_store.h",
         "input_stream.h",
         "multi_bson_stream_cursor.h",
         "//src/mongo/db/catalog:external_data_source_options_gen",
     ],
     deps = [
+        "csv_file",
         "//src/mongo/db/storage:record_store_base",
         "//src/mongo/transport/named_pipe",
     ],
@@ -35,6 +37,7 @@ mongo_cc_library(
     hdrs = [
         "csv_file.h",
         "//src/mongo/db/query:query_knobs_gen",
+        "//src/mongo/db/storage:default_path.h",
         "//src/mongo/transport/named_pipe:input_object.h",
         "//src/mongo/transport/named_pipe:io_error_message.h",
     ],
