--- a/src/mongo/db/query/virtual_collection/BUILD.bazel
+++ b/src/mongo/db/query/virtual_collection/BUILD.bazel
@@ -21,6 +21,7 @@ mongo_cc_library(
         "input_stream.h",
         "multi_bson_stream_cursor.h",
         "//src/mongo/db/catalog:external_data_source_options_gen",
+        "//src/mongo/db/storage:error_count.h",
     ],
     deps = [
         "csv_file",
@@ -36,8 +37,10 @@ mongo_cc_library(
     ],
     hdrs = [
         "csv_file.h",
+        "input_stream.h",
         "//src/mongo/db/query:query_knobs_gen",
         "//src/mongo/db/storage:default_path.h",
+        "//src/mongo/db/storage:error_count.h",
         "//src/mongo/transport/named_pipe:input_object.h",
         "//src/mongo/transport/named_pipe:io_error_message.h",
     ],
